--- a/index.html
+++ b/index.html
@@ -6,22 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styyle.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Oscarr Ulloa CV</title>
+    <title>Oscar Ulloa CV</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">CV Bootstrap</a>
+              <a class="navbar-brand" href="#">CV Oscar Ulloa</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Habilidades</a>
-                  <a class="nav-link" href="#">Portafolio</a>
+                  <a class="nav-link active" aria-current="page" href="#skills">Habilidades</a>
+                  <a class="nav-link" href="#portf">Portafolio</a>
                   <a class="nav-link" href="#">Contacto</a>
-                  <!-- <a class="nav-link disabled">Disabled</a> -->
                 </div>
               </div>
             </div>
@@ -40,7 +39,7 @@
     </div>
 
     <div>
-        <p class="fs-1 text-center">Mis Habilidades</p>
+        <p id="skills" class="fs-1 text-center">Mis Habilidades</p>
     </div>
 
 
@@ -70,7 +69,8 @@
 
 
       <div>
-        <p class="fs-1 text-center">Mi Portafolio</p>
+        <p id="portf" class="fs-1 text-center">Mi Portafolio</p>
+        </div>
     </div>
 
 
@@ -131,16 +131,18 @@
         
       </div>
 
+
+      <div class="mt-3 fs-1 text-center">
+        <p>Contacto</p>
+      </div>
+
       <div class="container-fluid mt-4 p-4 border formulario text-center">
-        <div class="mb-3">
-          <p>Contacto</p>
-        </div>
         <div class="mb-2 p-2">
             <label for="exampleFormControlInput1" class="form-label">Email address</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
           <div class="mb-2 p-2">
-            <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+            <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             <div>
                 <button type="button" class="btn btn-light mb-3 mt-3 boton">Enviar</button>
