--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="home_slider_content">
                 <p class="fs-4">Hola</p>
-                <div class="home_slider_title">Hola!, soy Oscar Ulloa</div>
+                <div class="home_slider_title">Hola!, soy Oscar Ulloa.</div>
                 <div class="home_slider_subtitle">Te invito a visitar mis repositorios.</div>
                 <a class="btn btn-primary" href="https://github.com/fulloa-01" target="_blank" role="button">Link</a>
             </div>
@@ -138,7 +138,7 @@
 
       <div class="container-fluid mt-4 p-4 border formulario text-center">
         <div class="mb-2 p-2">
-            <label for="exampleFormControlInput1" class="form-label">Email address</label>
+            <label for="exampleFormControlInput1" class="form-label">Dirección email</label>
             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
           </div>
           <div class="mb-2 p-2">
